--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <h1>Bem vindo a minha pagina do colabeduc</h1>
 <p>Aqui vcs terão acesso aos meus games</p>
-
+ <a href="https://www.w3schools.com/">Visit W3Schools.com!</a> 
+ 
 </body>
 </html> 
